# PythonStarterPackage

./: README.md  pyproject.toml
doc/: PythonStarterPackage_Tutorial.md
src/pythonstarterpackage/: starterpkg.py
src/pythonstarterpackage/utils/: configloader.py  filemodder.py
tests/: tests.py
