[build-system]
requires = [
    "setuptools>=61.2",
]
build-backend = "setuptools.build_meta"

[project]
name = "PythonStarterPackage"
version = "0.4.4"
authors = [
    { name = "ArcticTechnology", email = "arctic.technology.mail@gmail.com" },
]
description = "Python starter package, a template for creating your own python packages."
keywords = [
    "starter",
    "package",
    "template",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Financial and Insurance Industry",
    "Topic :: Education",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
]
requires-python = ">=3.8"
dependencies = [
    "requests>=2.27.1",
]

[project.optional-dependencies]
dev = [
    "pip-tools>=7",
    "tox>=4",
]


[project.license]
text = "MIT"

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.urls]
Homepage = "https://github.com/ArcticTechnology/PythonStarterPackage"

[project.scripts]
pythonstarterpackage = "pythonstarterpackage.main:main"

[tool.setuptools]
include-package-data = false

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = [
    "src",
]
namespaces = false

[tool.setuptools.package-data]
pythonstarterpackage = [
    "data/*.json",
]

[tool.setuptools.data-files]
"pythonstarterpackage/config" = [
    "config/config.json",
]

# Extra tools.
## TOX
[tool.tox]
env_list = ["py311", "py312", "py313"]

[tool.tox.env_run_base]
commands = [
    ["python", "-m", "unittest", "discover", "-s", "tests", "-p", "*.py"]
]
